--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   mime_type:
   rxdart: ^0.25.0
   http_parser: ^3.1.4
+  geolocator: ^5.3.2+2
+  permission_handler: ^5.0.1+1
+  google_maps_flutter: ^0.5.30
+  dio: ^3.0.10
+  animate_do: ^1.7.2
+
   # firebase_messaging: ^7.0.3
 
 dev_dependencies:
