--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,12 +16,17 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
    <application
         android:usesCleartextTraffic="true" 
         android:label="Denuncias Oficial"
         android:name=".Application"
         android:icon="@mipmap/ic_launcher">
+
+        <service android:name=".BackgroundLocationService"/>
+        
 
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyBstATBAXulR7mwTJXkcWfCK9lSGXsttDo"/>
